welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def dessinerFleur()
{
	baisseBrosse()
	droite()
	leveBrosse()
	avance()
	gauche()
	avance()
	baisseBrosse()
	baisseBrosse()
	gauche()
	leveBrosse()
	avance()
	droite()
	avance()
	baisseBrosse()
	gauche()
	leveBrosse()
	avance()
	gauche()
	avance()
	baisserBrosse()
	gauche()
	avance()
	setCouleurBrosse(Color.YELLOW)
}

def growFlowers()
{
	dessinerFleur()
}
